force-app/main/default/objects/Contact/fields/FieldFXClassicID__c.field-meta.xml
<CustomField>
    <fullName>FieldFXClassicID__c</fullName>
    <externalId>true</externalId>
    <label>FieldFXClassicID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>