force-app/main/default/objects/Contact/fields/FX5__Available_for_Field_Work__c.field-meta.xml
<CustomField>
    <fullName>FX5__Available_for_Field_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to indicate that the person is available to work in the field. This typically means that they can be assigned to a job or ticket.</description>
    <inlineHelpText>If selected, the user is selectable when adding a job or ticket in FieldFX Mobile. You must select this option if the user needs to use FieldFX Mobile.</inlineHelpText>
    <label>Available for Field Work</label>
    <type>Checkbox</type>
</CustomField>