force-app/main/default/objects/Contact/fields/FX5__Office__c.field-meta.xml
<CustomField>
    <fullName>FX5__Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Office where the user works. You must select an office if the user needs to use FieldFX Mobile.</inlineHelpText>
    <label>Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Office</value>
        </filterItems>
        <filterItems>
            <field>Account.FX5__IsArchived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>