force-app/main/default/objects/Contact/fields/FX5__User__c.field-meta.xml
<CustomField>
    <fullName>FX5__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>FieldFX-Force.com user record for the contact.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>