force-app/main/default/objects/Contact/recordTypes/FX5__Default.recordType-meta.xml
<RecordType>
    <fullName>FX5__Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>